--- a/app/src/main/res/layout/collection_layout.xml
+++ b/app/src/main/res/layout/collection_layout.xml
@@ -2,14 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="15dp"
+    android:layout_height="wrap_content"
     >
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_collection"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rv_vertical"
-        ></android.support.v7.widget.RecyclerView>
-
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
-
