--- a/app/src/main/res/layout/horizontal_trailer.xml
+++ b/app/src/main/res/layout/horizontal_trailer.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/trailer"
+        android:id="@+id/img_trailer"
         />
 </LinearLayout>
