--- a/app/src/main/res/layout/rating_layout.xml
+++ b/app/src/main/res/layout/rating_layout.xml
@@ -4,12 +4,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rating" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,57 +46,57 @@
             android:src="@drawable/icon_78" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="A"
-            android:textStyle="bold"
-            android:textAlignment="center" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:text="A"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAlignment="center" />-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="B"
-            android:textStyle="bold"
-            android:textAlignment="center" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:text="B"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAlignment="center" />-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="C"
-            android:textStyle="bold"
-            android:textAlignment="center" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:text="C"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAlignment="center" />-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="D"
-            android:textStyle="bold"
-            android:textAlignment="center" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:text="D"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAlignment="center" />-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="E"
-            android:textStyle="bold"
-            android:textAlignment="center" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:text="E"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAlignment="center" />-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="F"
-            android:textStyle="bold"
-            android:textAlignment="center" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.2"-->
+            <!--android:text="F"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textAlignment="center" />-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 </LinearLayout>
