--- a/app/src/main/res/layout/horizontal_collection.xml
+++ b/app/src/main/res/layout/horizontal_collection.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <android.support.v7.widget.RecyclerView
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:layout_marginRight="10dp"
+    >
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rv_trailer"
-        >
-    </android.support.v7.widget.RecyclerView>
+        android:src="@drawable/trailer"
+        android:id="@+id/img_trailer"
+        />
 </LinearLayout>
